# Probabilistic-Inversion-Modeling-of-Gas-Emissions-Fork

./: .gitignore
Code/: source_varying_functions.py
Code/Chilbolton_Case_Study (Section 5 + SM.B 2)/Exploratory Data Analysis (SM.B 2.4)/: Supplementary Material B, Section  2.4, ASC Determination.ipynb
Code/Chilbolton_Case_Study (Section 5 + SM.B 2)/Inversion (Section 5 + SM.B 2.5-2.7)/: Chilbolton Source 1 inversion.ipynb  Chilbolton Source 2 inversion.ipynb  Chilbolton Source 3and4 inversion.ipynb  Chilbolton simulation inversion.ipynb  Chilbolton sources inversion results.ipynb
Code/plumes/: .gitignore  A_matrix.npy  helpers.py  obstacle.py  presentation.py  test_A.py  test_A_matrix_consistency.py  varying_source.py
Problem_solving/: helpers.py  obstacle.py  presentation_plots.py  rmse_locations_varying_sensors.py  rmse_variyng_sensors.py  source_varying_functions.py
Problem_solving/Debugging/: reproduce_issue.py  reproduce_mcmc.py  test_A_matrix_values.py
Problem_solving/figures/: presentation_metrics.txt
Sourceinversion/: pyproject.toml  requirements.txt
Sourceinversion/sourceinversion/atmospheric_measurements/: atmospheric_measurements.py
