[tool.poetry]
name = "sourceinversion"
version = "0.1.5"
description = "A Gaussian plume model simulator and gas emission source inversion package."
authors = ["NewmanTHP <t.newman1@lancaster.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.26.2"
jax = ">=0.4.24,<0.5.0"
jaxtyping = ">=0.2.15"
matplotlib = ">=3.7.2"
seaborn = ">=0.12.2"
pandas = ">=1.5.3"
scipy = ">=1.11.3"
tensorflow-probability = ">=0.23.0,<0.25.0"
jaxlib = ">=0.4.24,<0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
